# Learn_IT

./: .dockerignore  .env  App.tsx  Cargo.toml  Dockerfile  README.md  diagnostics.sh  docker-cleanup.sh  docker-compose.yml  fallback-server.js  index.css  init-db.sh  main.tsx  package.json  start.sh  tailwind.config.js
components/: Dictionary.tsx  Navbar.tsx  ProgressBar.tsx
content/: courses.json
content/beginner/: computer_basics.md  introduction_to_it.md  network_basics.md  operating_systems.md  software_basics.md
data/: dictionary.ts  lessons.ts
pages/: Home.tsx  LessonDetail.tsx  Lessons.tsx  Progress.tsx  Skills.tsx
src/: main.rs  routes.rs
src/config/: app_config.rs  database.rs  mod.rs
src/modules/: mod.rs
src/modules/auth/: handler.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/modules/courses/: handler.rs  mod.rs  model.rs  models.rs  routes.rs
src/modules/lessons/: handler.rs  markdown.rs  model.rs  models.rs  repository.rs  routes.rs
src/modules/users/: handler.rs  model.rs  models.rs  routes.rs
src/utils/: markdown.rs  mod.rs  template.rs  theme.rs  utils.rs
static/css/: enhanced.css  roadmap.css  style.css
static/js/: main.js
templates/: about.html  base.html  index.html  roadmap.html
templates/auth/: login.html  register.html
templates/courses/: course.html  index.html
templates/lessons/: index.html  lesson.html  level.html
templates/progression/: roadmap.html
