[package]
name = "it_learning_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-identity = "0.6.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }  # Enable cookie-session feature
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.18.1"
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
dotenv = "0.15.0"
config = "0.13.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "json"] }
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9.3"  # For Markdown rendering
syntect = "5.0.0"  # For syntax highlighting
argon2 = "0.5.0"   # For secure password hashing
uuid = { version = "1.3.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }  # For API requests
once_cell = "1.18.0"  # Added missing dependency
html-escape = "0.2.13"  # Added missing dependency
time = "0.3"  # Added for the Duration type used in identity middleware
